--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "kierandenshi@mac.com",
   "dependencies": {
     "aws-sdk": "^2.167.0",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "gm": "^1.23.0",
-    "multer": "^1.3.0",
     "serverless-http": "^1.5.2"
   }
 }
