--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "gm": "^1.23.0",
+    "serverless": "^1.25.0",
     "serverless-http": "^1.5.2"
   }
 }
